salt/downloads/bugs/fixes/bug_issue_descriptions/salt-58817
**Description**
Running the `pre-commit` scripts locally fails:
```
Check Changelog Entries..................................................Failed
- hook id: check-changelog-entries
- exit code: 1

File "/home/mark.ferrell/Development/salt/salt.git/.pre-commit-hooks/check-changelog-entries.py", line 47
    file=sys.stderr,
        ^
SyntaxError: invalid syntax
```

Bug appears to be due to the `#!` line in the pre-commit script:
```
> head -n1 .pre-commit-hooks/check-changelog-entries.py
#!/usr/bin/env python
```

If I change this to use `python3` the the error goes away.

**Setup**
os: Ubuntu 20.04
python3: 3.8.5
python: 2.7.18

**Steps to Reproduce the behavior**
`pre-commit run --files <insert any .py file here>`

**Versions Report**
<details><summary>salt --versions-report</summary>
(Provided by running salt --versions-report. Please also mention any differences in master/minion versions.) 

```
> salt --versions-report
Salt Version:
           Salt: 3002rc1-20-g08527e7975
 
Dependency Versions:
           cffi: Not Installed
       cherrypy: Not Installed
       dateutil: 2.7.3
      docker-py: 4.3.1
          gitdb: Not Installed
      gitpython: Not Installed
         Jinja2: 2.10.1
        libgit2: Not Installed
       M2Crypto: Not Installed
           Mako: 1.1.0
   msgpack-pure: Not Installed
 msgpack-python: 0.6.2
   mysql-python: Not Installed
      pycparser: Not Installed
       pycrypto: 2.6.1
   pycryptodome: 3.9.8
         pygit2: Not Installed
         Python: 3.8.5 (default, Jul 28 2020, 12:59:40)
   python-gnupg: 0.4.5
         PyYAML: 5.3.1
          PyZMQ: 18.1.1
          smmap: Not Installed
        timelib: Not Installed
        Tornado: 4.5.3
            ZMQ: 4.3.2
 
System Versions:
           dist: ubuntu 20.04 focal
         locale: utf-8
        machine: x86_64
        release: 5.4.0-52-generic
         system: Linux
        version: Ubuntu 20.04 focal
```
</details>